kubernetes/k3s/0-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ithust-frontend
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ithust-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  template:
    metadata:
      labels:
        app: ithust-frontend
    spec:
      containers:
        - name: ithust-frontend
          image: minhkhoi779/ithust-frontend:stable
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "300m"
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 192Mi
          ports:
            - name: frontend
              containerPort: 80
