kubernetes/k3s/0-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ithust-frontend
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: ithust-frontend
  ports:
    - name: frontend
      port: 80
      targetPort: frontend
      protocol: TCP
