kubernetes/k3s/0-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ithust-frontend-ingress
  namespace: production
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ithust.shop
  rules:
    - host: ithust.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ithust-frontend
                port:
                  number: 80
